# DeeLeMa

./: .gitignore  DeeLeMa (Multi_Aux_Toy).ipynb  DeeLeMa (Toy).ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  test_aux_ttbar_w_hh_13TeV.ipynb  train.py
deelema/: __init__.py  dataset.py  model.py  utils.py
notes/: .gitignore  Auxiliary.pth  DeeLeMa (Toy).ipynb  DeeLeMa (Toy)_Analysis.ipynb  DeeLeMa_Toy.pth  DeeLeMa_Toy_ELU.pth
