[project]
name = "DeeLeMa"
version = "0.1.0"
description = "Deep Learning for Mass estimation"
authors = [
    {name = "Tae-Geun Kim", email = "ax2ct@outlook.com"},
    {name = "Kayoung Ban", email = "ban94gy@gmail.com"},
    {name = "Yeji Park", email = "yeji.park.yeji@gmail.com"},
]
dependencies = [
    "torch>=2.0.1",
    "lightning>=2.0.6",
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
    "scipy>=1.9.3",
    "pandas>=2.0.3",
    "wandb>=0.15.8",
    "notebook>=7.0.1",
    "scikit-learn>=1.3.0",
    "torchinfo>=1.8.0",
    "tensorboard>=2.13.0",
    "rich>=13.5.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

