[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DeeLeMa"
version = "1.0.0"
description = "Deep Learning for Mass estimation"
authors = [
    {name = "Tae-Geun Kim", email = "ax2ct@outlook.com"},
    {name = "Kayoung Ban", email = "ban94gy@gmail.com"},
    {name = "Yeji Park", email = "yeji.park.yeji@gmail.com"},
]
dependencies = [
    "torch ==2.1.2",
    "lightning ==2.1.3",
    "numpy ==1.26.2",
    "matplotlib ==3.8.2",
    "scipy ==1.11.4",
    "pandas ==2.1.4",
    "wandb ==0.16.1",
    "notebook ==7.0.6",
    "scikit-learn ==1.3.2",
    "torchinfo ==1.8.0",
    "tensorboard ==2.15.1",
    "rich ==13.7.0",
]
readme = "README.md"
license = {text = "MIT"}

