[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DeeLeMa"
version = "1.0.0"
description = "Deep Learning for Mass estimation"
readme = "README.md"
dependencies = [
    "lightning ==2.1.3",
    "matplotlib ==3.8.2",
    "notebook ==7.0.7",
    "numpy ==1.26.2",
    "pandas ==2.1.4",
    "rich ==13.7.0",
    "scikit-learn ==1.3.2",
    "scipy ==1.11.4",
    "tensorboard ==2.15.1",
    "torch ==2.1.2",
    "torchinfo ==1.8.0",
    "wandb ==0.16.1",
]

[project.license]
text = "MIT"

[[project.authors]]
name = "Tae-Geun Kim"
email = "ax2ct@outlook.com"

[[project.authors]]
name = "Kayoung Ban"
email = "ban94gy@gmail.com"

[[project.authors]]
name = "Yeji Park"
email = "yeji.park.yeji@gmail.com"
